--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Privacy Policy for WITY</h1>
-    <p><strong>Effective Date:</strong> [Insert Date]</p>
+    <p><strong>Effective Date:</strong> 01/16/2025</p>
 
     <p>WITY ("the Extension") respects your privacy and is committed to protecting your personal information. This Privacy Policy explains how we collect, use, and protect data in connection with your use of the Extension.</p>
 
@@ -64,14 +64,11 @@
         <li><a href="https://developers.google.com/youtube/terms/api-services-terms-of-service" target="_blank">YouTube API Terms of Service</a></li>
     </ul>
 
-    <h2>6. Children's Privacy</h2>
-    <p>WITY is not intended for use by individuals under the age of 13, and we do not knowingly collect data from children.</p>
-
     <h2>7. Changes to This Privacy Policy</h2>
     <p>We may update this Privacy Policy from time to time. Any changes will be posted on this page with the updated effective date. Please review it periodically.</p>
 
     <h2>8. Contact Us</h2>
     <p>If you have any questions, concerns, or requests regarding this Privacy Policy or the Extension, please contact us at:</p>
-    <p><strong>Email:</strong> [Your Email Address]</p>
+    <p><strong>Email:</strong> developermengjia@gmail.com</p>
 </body>
 </html>
